@@ -60,7 +60,7 @@
 #include <dmalloc.h>
 #endif
 
-TDS_RCSID(var, "$Id: odbc.c,v 1.515 2009/11/19 08:45:49 freddy77 Exp $");
+TDS_RCSID(var, "$Id: odbc.c,v 1.516 2009/11/27 16:16:39 freddy77 Exp $");
 
 static SQLRETURN _SQLAllocConnect(SQLHENV henv, SQLHDBC FAR * phdbc);
 static SQLRETURN _SQLAllocEnv(SQLHENV FAR * phenv);
@@ -4732,7 +4732,7 @@ SQLGetData(SQLHSTMT hstmt, SQLUSMALLINT icol, SQLSMALLINT fCType, SQLPOINTER rgb
 				ODBC_RETURN(stmt, SQL_SUCCESS_WITH_INFO);
 			}
 		} else {
-			colinfo->column_text_sqlgetdatapos = colinfo->column_size;
+			colinfo->column_text_sqlgetdatapos = colinfo->column_cur_size;
 		}
 	}
 	ODBC_RETURN_(stmt);
